--- a/index.html
+++ b/index.html
@@ -13124,6 +13124,14 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<h3>Tucker Siegel</h3>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <p>Inspired by Nate Silver at FiveThirtyEight, who has built ELO based systems for rating sports teams in the NFL, NBA, WNBA, etc. ELO essentially boils down to comparing teams and changing the rating of the team based on prior victories and losses. They then use monte carlo simulations (random simulations) to estimate future wins and losses. So could we use the same system and apply is to college lacrosse to predict the winner of the national championship, or at least get percentage chances of each team winning? This could be useful because if the modeling method is successful in Lacrosse, it may work for college basketball (with some modifications)</p>
 
 </div>
